--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["development-tools"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 clap = { version = "4.0", features = ["derive"] }
 regex = "1.10"
 tokio = { version = "1.0", features = ["full"] }
@@ -21,9 +22,13 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 chrono = { version = "0.4", features = ["serde"] }
 async-trait = "0.1"
 uuid = { version = "1.0", features = ["v4", "serde"] }
+dirs = "5.0"
 
 [profile.release]
 opt-level = 3
 lto = true
 codegen-units = 1
 panic = "abort"
+
+[dev-dependencies]
+tempfile = "3.24.0"
