feat(sdd): add integration testing framework with SDD artifacts
- Add CCH integration test framework with 4 test cases
  - TC-001: Block force push (dangerous git operations)
  - TC-002: Context injection for file types
  - TC-003: Session logging validation
  - TC-004: Permission explanations

- Create SDD artifacts for integration-testing feature
  - specify.md: Requirements specification
  - plan.md: Technical architecture
  - tasks.md: Task breakdown (80% complete)
  - checklist.md: Quality validation with gap analysis

- Update release-cch skill to require integration tests
  - Modified preflight-check.sh to run integration tests
  - Added Integration Tests section to SKILL.md
  - Updated PR template with pre-merge requirements

- Add Taskfile integration
  - task integration-test (alias: itest)
  - task integration-test-quick
  - task integration-test-single

- Add using-claude-code-cli skill for CLI automation patterns

Quality notes:
- Tests use soft assertions (identified as GAP-001)
- CI/CD workflow pending (identified as GAP-002)
- All 4 test cases implemented but require verification

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ coverage/
 # Backup files
 *.bak
 *.backup
+
+# Integration test results
+test/integration/results/*.json
+!test/integration/results/.gitkeep
+
+# Task cache
+.task/
