feat(validation): add IQ/OQ/PQ validation workflows and tests
Complete implementation of the IQ/OQ/PQ validation framework with:

GitHub Actions Workflows (#57, #58):
- iq-validation.yml: Cross-platform IQ tests (macOS ARM64, Intel, Linux, Windows)
- validation.yml: Combined IQ → OQ → PQ validation sequence with evidence collection

Memory PQ Tests (#61):
- pq_memory.rs: Memory baseline, load, and stability tests
- Cross-platform memory measurement (macOS/Linux)
- Binary size verification

Evidence Collection Scripts (#62):
- collect-iq-evidence.sh: IQ evidence with environment info
- collect-oq-evidence.sh: OQ test suite evidence
- collect-pq-evidence.sh: PQ benchmarks and metrics
- generate-validation-report.sh: Combined report generation

Taskfile Tasks:
- task collect-iq/oq/pq: Individual evidence collection
- task collect-all: Full IQ/OQ/PQ evidence + report
- task validation-report: Generate report from existing evidence

SDD Updates:
- Mark GAP-002, GAP-004, GAP-006, GAP-007 as resolved
- Update test infrastructure checklist

All 61 tests pass (57 existing + 4 new memory tests).

Closes #57, #58, #61, #62

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -118,6 +118,38 @@ tasks:
       - task: test
       - task: integration-test
 
+  # ===========================================================================
+  # IQ/OQ/PQ Validation Tasks
+  # ===========================================================================
+
+  collect-iq:
+    desc: Collect Installation Qualification evidence
+    cmds:
+      - ./scripts/collect-iq-evidence.sh --release
+
+  collect-oq:
+    desc: Collect Operational Qualification evidence
+    cmds:
+      - ./scripts/collect-oq-evidence.sh --release
+
+  collect-pq:
+    desc: Collect Performance Qualification evidence
+    cmds:
+      - ./scripts/collect-pq-evidence.sh --release
+
+  collect-all:
+    desc: Collect all IQ/OQ/PQ evidence
+    cmds:
+      - task: collect-iq
+      - task: collect-oq
+      - task: collect-pq
+      - ./scripts/generate-validation-report.sh
+
+  validation-report:
+    desc: Generate combined validation report from existing evidence
+    cmds:
+      - ./scripts/generate-validation-report.sh
+
   coverage:
     desc: Generate test coverage report
     dir: "{{.CCH_CLI_DIR}}"
