docs: add release-cch skill documentation to wiki (#83)
* Develop deploy (#80)

* feat(ci): implement two-tier CI with develop/main branching strategy (#67)

Add CI/CD tiered approach to balance development velocity with release quality:

Branching Model:
- main: Production-ready, protected, requires Full Validation
- develop: Integration branch (default), requires Fast CI
- feature/*, fix/*: Working branches

CI Tiers:
- Fast CI (~2-3 min): fmt, clippy, unit tests, Linux IQ smoke test
  Triggers on: PRs to develop, pushes to feature branches
- Full Validation (~10-15 min): IQ (4 platforms) + OQ + PQ + evidence
  Triggers on: PRs to main, release tags, manual dispatch

Workflow Changes:
- ci.yml: Converted to Fast CI, triggers on develop/feature branches
- validation.yml: Full validation, only PRs to main and releases
- iq-validation.yml: Manual-only for formal validation runs

Documentation:
- constitution.md: Added CI/CD Policy section
- docs/devops/BRANCHING.md: Detailed branching workflows
- docs/devops/CI_TIERS.md: CI tier explanation
- docs/devops/RELEASE_PROCESS.md: Release and hotfix workflows
- AGENTS.md: Updated with new workflow instructions

Benefits:
- Daily development: ~2-3 min feedback loop
- Releases: Thorough ~10-15 min validation
- Hotfixes: Direct to main with backport to develop

* fix(ci): update macOS Intel runner from macos-13 to macos-15-intel (#69)

macOS 13 runners were retired by GitHub in Jan 2026.
Using macos-15-intel as the new x86_64 runner (supported until Aug 2027).

Reference: actions/runner-images#13046

* feat(governance): Phase 2.1 Core Governance Implementation (#71)

* feat(governance): add Phase 2 governance types and Rule extensions

Implements P2.1-T01 through P2.1-T04:
- PolicyMode enum (enforce, warn, audit) with default=enforce
- Decision enum (allowed, blocked, warned, audited) for logging
- GovernanceMetadata struct for rule provenance and documentation
- Confidence enum (high, medium, low)
- Rule struct extended with 

--- a/docs/wiki-mapping.yml
+++ b/docs/wiki-mapping.yml
@@ -75,6 +75,14 @@ checklists:
   .speckit/checklists/phase2-governance-checklist.md: "Checklist-Phase2-Governance"
   .speckit/checklists/rulez-ui-checklist.md: "Checklist-RuleZ-UI"
 
+# Skills Documentation
+skills:
+  .claude/skills/release-cch/SKILL.md: "Skill-Release-CCH-Guide"
+  .claude/skills/release-cch/README.md: "Skill-Release-CCH-Overview"
+  .claude/skills/release-cch/references/release-workflow.md: "Skill-Release-CCH-Workflow"
+  .claude/skills/release-cch/references/hotfix-workflow.md: "Skill-Release-CCH-Hotfix"
+  .claude/skills/release-cch/references/troubleshooting.md: "Skill-Release-CCH-Troubleshooting"
+
 # Wiki Pages Summary (for tracking)
 wiki_pages_created:
   - Home: "Main project documentation with overview and quick start"
@@ -114,3 +122,8 @@ wiki_pages_created:
   - Feature-Advanced-Rules-Spec: "Advanced rules specification"
   - Checklist-Phase2-Governance: "Governance completion checklist"
   - Checklist-RuleZ-UI: "RuleZ UI completion checklist"
+  - Skill-Release-CCH-Guide: "CCH release workflow automation"
+  - Skill-Release-CCH-Overview: "Release skill introduction"
+  - Skill-Release-CCH-Workflow: "Standard release process"
+  - Skill-Release-CCH-Hotfix: "Hotfix release process"
+  - Skill-Release-CCH-Troubleshooting: "Release troubleshooting"
