chore: prepare v1.1.0 release (#85)
* feat(ci): implement two-tier CI with develop/main branching strategy (#67)

Add CI/CD tiered approach to balance development velocity with release quality:

Branching Model:
- main: Production-ready, protected, requires Full Validation
- develop: Integration branch (default), requires Fast CI
- feature/*, fix/*: Working branches

CI Tiers:
- Fast CI (~2-3 min): fmt, clippy, unit tests, Linux IQ smoke test
  Triggers on: PRs to develop, pushes to feature branches
- Full Validation (~10-15 min): IQ (4 platforms) + OQ + PQ + evidence
  Triggers on: PRs to main, release tags, manual dispatch

Workflow Changes:
- ci.yml: Converted to Fast CI, triggers on develop/feature branches
- validation.yml: Full validation, only PRs to main and releases
- iq-validation.yml: Manual-only for formal validation runs

Documentation:
- constitution.md: Added CI/CD Policy section
- docs/devops/BRANCHING.md: Detailed branching workflows
- docs/devops/CI_TIERS.md: CI tier explanation
- docs/devops/RELEASE_PROCESS.md: Release and hotfix workflows
- AGENTS.md: Updated with new workflow instructions

Benefits:
- Daily development: ~2-3 min feedback loop
- Releases: Thorough ~10-15 min validation
- Hotfixes: Direct to main with backport to develop

* fix(ci): update macOS Intel runner from macos-13 to macos-15-intel (#69)

macOS 13 runners were retired by GitHub in Jan 2026.
Using macos-15-intel as the new x86_64 runner (supported until Aug 2027).

Reference: actions/runner-images#13046

* feat(governance): Phase 2.1 Core Governance Implementation (#71)

* feat(governance): add Phase 2 governance types and Rule extensions

Implements P2.1-T01 through P2.1-T04:
- PolicyMode enum (enforce, warn, audit) with default=enforce
- Decision enum (allowed, blocked, warned, audited) for logging
- GovernanceMetadata struct for rule provenance and documentation
- Confidence enum (high, medium, low)
- Rule struct extended with mode, priority, and governance fields
- sort

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,12 +4,26 @@
 # Install Task: https://taskfile.dev/installation/
 #
 # Quick start:
-#   task --list        # Show all available tasks
-#   task build         # Build CCH binary
-#   task test          # Run all tests
-#   task integration-test  # Run integration tests
+#   task --list            # Show all available tasks
+#   task build             # Build both CLI and UI
+#   task test              # Run all unit tests
+#   task test:all          # All tests including integration and E2E
+#   task dev               # Start full dev environment
+#   task ci                # Run full CI pipeline locally
 
 version: '3'
+
+# ===========================================================================
+# Subproject Includes
+# ===========================================================================
+
+includes:
+  cli:
+    taskfile: ./cch_cli/Taskfile.yml
+    dir: ./cch_cli
+  ui:
+    taskfile: ./rulez_ui/Taskfile.yml
+    dir: ./rulez_ui
 
 vars:
   PROJECT_NAME: cch
@@ -28,6 +42,12 @@ tasks:
       - task --list
 
   build:
+    desc: Build both CLI and UI
+    cmds:
+      - task: cli:build
+      - task: ui:build
+
+  build-cli:
     desc: Build CCH binary (release mode)
     dir: "{{.CCH_CLI_DIR}}"
     cmds:
@@ -113,10 +133,12 @@ tasks:
       TEST_NAME: '{{.TEST_NAME | default "01-block-force-push"}}'
 
   test-all:
-    desc: Run all tests (unit + integration)
+    desc: Run all tests (unit + integration + E2E)
     cmds:
       - task: test
+      - task: ui:test
       - task: integration-test
+      - task: ui:e2e
 
   # ===========================================================================
   # IQ/OQ/PQ Validation Tasks
@@ -250,6 +272,33 @@ tasks:
       - ./{{.CCH_BINARY}} validate
 
   # ===========================================================================
+  # Development Environment Tasks
+  # ===========================================================================
+
+  dev:
+    desc: Start full dev environment (CLI watch + UI dev server)
+    cmds:
+      - echo "Starting development environment..."
+      - echo "Run 'task cli:watch' in one terminal"
+      - echo "Run 'task ui:dev' in another terminal"
+      - task: ui:dev
+
+  dev-cli:
+    desc: Start CLI development with auto-rebuild
+    cmds:
+      - task: cli:watch
+
+  dev-ui:
+    desc: Start UI development server
+    cmds:
+      - task: ui:dev
+
+  dev-ui-tauri:
+    desc: Start Tauri desktop development
+    cmds:
+      - task: ui:dev:tauri
+
+  # ===========================================================================
   # CI/CD Tasks
   # ===========================================================================
 
@@ -257,16 +306,19 @@ tasks:
     desc: Run full CI pipeline locally
     cmds:
       - task: clean
-      - task: build
+      - task: build-cli
       - task: check
       - task: test
       - echo "CI pipeline completed successfully"
 
   ci-full:
-    desc: Run full CI pipeline including integration tests
+    desc: Run full CI pipeline including integration and E2E tests
     cmds:
       - task: ci
+      - task: ui:check
+      - task: ui:build
       - task: integration-test
+      - task: ui:e2e
 
   # ===========================================================================
   # Documentation Tasks
