feat(07-01): add JSON schema validation with schemars and jsonschema
- Add schemars 1.2 and jsonschema 0.28 to workspace dependencies
- Derive JsonSchema on Event and EventType in models.rs
- Create schema.rs module with pre-compiled LazyLock validator
- Add validate_event_schema(), generate_event_schema(), schema_draft_version()
- Fix pre-existing bug in debug.rs: Timing.len() -> Timing.rules_evaluated
- Schema uses 2020-12 draft, auto-generated from Event struct

Deviation [Rule 1 - Bug]: Fixed debug.rs attempting to call .len() on Timing struct

--- a/rulez/Cargo.toml
+++ b/rulez/Cargo.toml
@@ -27,6 +27,8 @@ tracing-subscriber.workspace = true
 chrono.workspace = true
 dirs.workspace = true
 evalexpr = "13.1"
+schemars.workspace = true
+jsonschema.workspace = true
 
 [dev-dependencies]
 tempfile.workspace = true
