--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,10 @@ chrono = { version = "0.4", features = ["serde"] }
 # System
 dirs = "5.0"
 
+# JSON Schema
+schemars = { version = "1.2", features = ["derive"] }
+jsonschema = "0.28"
+
 # Testing (used as dev-dependencies in member crates)
 tempfile = "3.24"
 assert_cmd = "2.0"
