--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ clap = { version = "4.0", features = ["derive"] }
 
 # Patterns
 regex = "1.10"
+lru = "0.12"
 
 # Async (minimal features for performance)
 tokio = { version = "1.0", features = ["process", "time", "fs", "io-std", "io-util", "rt", "macros"] }
