--- a/rulez/Cargo.toml
+++ b/rulez/Cargo.toml
@@ -29,6 +29,7 @@ dirs.workspace = true
 evalexpr = "13.1"
 schemars.workspace = true
 jsonschema.workspace = true
+lru.workspace = true
 
 [dev-dependencies]
 tempfile.workspace = true
