--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,6 +1,6 @@
 # E2E Tests for RuleZ UI
 #
-# Runs Playwright E2E tests on push to main/develop when rulez_ui changes.
+# Runs Playwright E2E tests on push to main/develop when rulez-ui changes.
 # Uses Bun for package management and Playwright for browser automation.
 
 name: E2E Tests
@@ -9,18 +9,18 @@ on:
   push:
     branches: [main, develop]
     paths:
-      - 'rulez_ui/**'
+      - 'rulez-ui/**'
       - '.github/workflows/e2e.yml'
   pull_request:
     branches: [main, develop]
     paths:
-      - 'rulez_ui/**'
+      - 'rulez-ui/**'
       - '.github/workflows/e2e.yml'
   workflow_dispatch:
 
 defaults:
   run:
-    working-directory: rulez_ui
+    working-directory: rulez-ui
 
 jobs:
   e2e-tests:
@@ -53,7 +53,7 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: rulez_ui/playwright-report/
+          path: rulez-ui/playwright-report/
           retention-days: 30
 
       - name: Upload test artifacts
@@ -61,13 +61,13 @@ jobs:
         if: failure()
         with:
           name: test-results
-          path: rulez_ui/test-results/
+          path: rulez-ui/test-results/
           retention-days: 7
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
-          files: rulez_ui/test-results/junit.xml
+          files: rulez-ui/test-results/junit.xml
           comment_mode: off
           check_name: E2E Test Results
