feat(17-02): publish Playwright test results
- emit JUnit and GitHub reporters on CI
- upload check results per OS/browser combination

--- a/.github/workflows/e2e-matrix.yml
+++ b/.github/workflows/e2e-matrix.yml
@@ -83,3 +83,13 @@ jobs:
           name: playwright-report-${{ matrix.os }}-${{ matrix.browser }}
           path: rulez_ui/playwright-report/
           retention-days: 30
+
+      - name: Publish test results
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Playwright Tests (${{ matrix.os }}, ${{ matrix.browser }})
+          path: rulez_ui/test-results/junit.xml
+          reporter: java-junit
+          fail-on-error: true
+
