feat(17-02): post Playwright summary comments
- comment PRs with per-matrix test summaries
- link back to HTML report artifacts

--- a/.github/workflows/e2e-matrix.yml
+++ b/.github/workflows/e2e-matrix.yml
@@ -93,3 +93,12 @@ jobs:
           reporter: java-junit
           fail-on-error: true
 
+      - name: Comment test results on PR
+        uses: daun/playwright-report-comment@v3
+        if: github.event_name == 'pull_request'
+        with:
+          report-path: rulez_ui/playwright-report/
+          comment-title: 'Playwright Test Results (${{ matrix.os }}, ${{ matrix.browser }})'
+          include-summary: true
+          include-report-link: true
+
