--- a/rulez_ui/package.json
+++ b/rulez_ui/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.64.0",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-shell": "^2.2.1",
+    "@tauri-apps/plugin-store": "2.4.2",
     "monaco-yaml": "^5.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
