--- a/cch_cli/Cargo.toml
+++ b/cch_cli/Cargo.toml
@@ -26,6 +26,7 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 chrono.workspace = true
 dirs.workspace = true
+uuid = { version = "1.0", features = ["v4"] }
 
 [dev-dependencies]
 tempfile.workspace = true
