fix: prevent dorny/test-reporter crash when no junit.xml exists
Add hashFiles condition to skip test-reporter when Playwright fails before
generating junit.xml. Also set fail-on-error: false since E2E failures are
already surfaced by the Playwright step itself.

--- a/.github/workflows/e2e-matrix.yml
+++ b/.github/workflows/e2e-matrix.yml
@@ -97,12 +97,12 @@ jobs:
 
       - name: Publish test results
         uses: dorny/test-reporter@v1
-        if: always()
+        if: always() && hashFiles('rulez_ui/test-results/junit.xml') != ''
         with:
           name: Playwright Tests (${{ matrix.os }}, ${{ matrix.browser }})
           path: rulez_ui/test-results/junit.xml
           reporter: java-junit
-          fail-on-error: true
+          fail-on-error: false
 
       - name: Comment test results on PR
         uses: daun/playwright-report-comment@v3
