--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,9 @@ coverage/
 test/integration/results/*.json
 !test/integration/results/.gitkeep
 
+# VS Code extension build artifacts
+extensions/copilot-rulez-vscode/dist/
+extensions/copilot-rulez-vscode/node_modules/
+
 # Task cache
 .task/
