fix(ci): prevent PR comment step from failing E2E workflow
The 'Comment test results on PR' step using daun/playwright-report-comment@v3
fails on pull_request events due to restricted GITHUB_TOKEN permissions for
PR comments from feature branches. All 27 Playwright tests pass successfully
but this cosmetic step was marking the entire job as failed.

Added continue-on-error: true so the PR comment is best-effort and doesn't
block merging.

--- a/.github/workflows/e2e-matrix.yml
+++ b/.github/workflows/e2e-matrix.yml
@@ -107,6 +107,7 @@ jobs:
       - name: Comment test results on PR
         uses: daun/playwright-report-comment@v3
         if: github.event_name == 'pull_request'
+        continue-on-error: true
         with:
           report-path: rulez_ui/playwright-report/
           comment-title: 'Playwright Test Results (${{ matrix.os }}, ${{ matrix.browser }})'
