feat(23-01): create reporting library, main entry point, and Taskfile integration
- Add e2e/lib/reporting.sh with reporting_init, record_result, write_junit_xml
- Add print_results_table for ASCII CLI x scenario matrix with printf alignment
- Add write_markdown_summary with optional GITHUB_STEP_SUMMARY integration
- Add e2e/run.sh: discovers scenario dirs, sources scenario scripts, runs all
- run.sh supports --cli filter, outputs JUnit XML + ASCII table + Markdown
- Add e2e task to Taskfile.yml (deps: build-cli, precondition: e2e/run.sh exists)

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -132,6 +132,15 @@ tasks:
     vars:
       TEST_NAME: '{{.TEST_NAME | default "01-block-force-push"}}'
 
+  e2e:
+    desc: Run CLI E2E integration tests
+    deps: [build-cli]
+    cmds:
+      - ./e2e/run.sh
+    preconditions:
+      - sh: test -f e2e/run.sh
+        msg: "E2E harness not found. Expected e2e/run.sh"
+
   test-all:
     desc: Run all tests (unit + integration + E2E)
     cmds:
